<resources>
    <string name="app_name">Shine</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_password">Enter Password</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="temp_text">Temp Text</string>
    <string name="add_transaction">Add Transaction</string>
    <string name="new_transaction">New Transaction</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="full_name">Full Name</string>
    <string name="email">Email</string>
    <string name="register">Register</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="confirm">Confirm</string>
    <string name="amount">Amount</string>
    <string name="category">Category:</string>
    <string name="save">Save</string>
    <string name="mm_dd_yyyy">MM/DD/YYYY</string>
    <string name="vendor_name">Vendor Name</string>
    <string name="delete_account">Delete Account</string>
    <string name="change_password">Change Password</string>
    <string name="name">Name</string>
    <string name="infoText">Hello! Welcome to Shine. Shine is a financial tracking app that lets users keep
    track of their expenses by entering in their transaction data.\n\nOn the home screen you can get started by adding a
    transaction from clicking the "New Transaction" button. From here, a popup will ask you enter several key items about
    the proposed transaction such as the amount, date of purchase, name of vendor, the category of the transaction,
    and finally how often the transaction occurs.\n\nShine also utilizes graphs and lists in order for you to better understand
    your spending over longer periods of time. Click the appropriate button for each on the home screen.\n\nCredits for shine
    go to Humza Ayub, Anish Malik, Raaha Azfar, and Ethan Root.</string>
</resources>